# grpc-practice

./: Cargo.toml  build.rs  sample.proto
src/: client.rs  main.rs
