[package]
name = "grpc-test"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
prost = "0.13.4"
prost-types = "0.13.4"
thiserror = "2.0.7"
tokio = { version = "1.42.0", features = ["full"] }
tonic = { version = "0.12.3", features = ["transport"] }

[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"
